having trouble with imports

--- a/coc102/22COC102-Coursework.ipynb
+++ b/coc102/22COC102-Coursework.ipynb
@@ -1,11 +1,119 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5677de34d3b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImageDataGenerator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mConv2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMaxPooling2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFlatten\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDropout\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "import plotly.offline as pyo\n",
+    "pyo.init_notebook_mode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Utility Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plotting functions\n",
+    "def plot_data(x=None, y=None, z=None, title=\"\", x_label=\"\", y_label=\"\", name=\"\", mode=\"markers\", text=\"\", **traces):\n",
+    "    fig = go.Figure(layout={\n",
+    "        \"title\": title,\n",
+    "        \"xaxis\": {\"title\": x_label},\n",
+    "        \"yaxis\": {\"title\": y_label}\n",
+    "    })\n",
+    "    \n",
+    "    if z is None:\n",
+    "        data = go.Scatter(\n",
+    "            x=x,\n",
+    "            y=y,\n",
+    "            mode=mode,\n",
+    "            name=name,\n",
+    "            text=text\n",
+    "        )\n",
+    "    else:\n",
+    "        data = go.Scatter3d(\n",
+    "            x=x,\n",
+    "            y=y,\n",
+    "            z=z,\n",
+    "            mode=mode,\n",
+    "            name=name,\n",
+    "            text=text\n",
+    "        )\n",
+    "\n",
+    "    if x is not None and y is not None:\n",
+    "        fig.add_trace(data)\n",
+    "    \n",
+    "    for t in traces:\n",
+    "        fig.add_trace(traces[t])\n",
+    "    \n",
+    "    return fig\n",
+    "\n",
+    "def create_trace(x=None, y=None, z=None, name=\"\", mode=\"lines\", text=\"\", marker_size=None):\n",
+    "    if z is None:\n",
+    "        trace = go.Scatter(\n",
+    "            x=x,\n",
+    "            y=y,\n",
+    "            mode=mode,\n",
+    "            name=name,\n",
+    "            text=text,\n",
+    "            marker=dict(size=marker_size)\n",
+    "        )\n",
+    "    else:\n",
+    "        trace = go.Scatter3d(\n",
+    "            x=x,\n",
+    "            y=y,\n",
+    "            z=z,\n",
+    "            mode=mode,\n",
+    "            name=name,\n",
+    "            text=text,\n",
+    "            marker=dict(size=marker_size)\n",
+    "        )\n",
+    "    \n",
+    "    return trace"
+   ]
   }
  ],
  "metadata": {
