--- a/coc131/week_4_solved.ipynb
+++ b/coc131/week_4_solved.ipynb
@@ -304,19 +304,19 @@
     {
      "data": {
       "text/plain": [
-       "array([[-1.        ,  0.27272727, -1.        , -1.        , -1.        ,\n",
+       "array([[-1.        , -0.09090909, -1.        , -1.        , -1.        ,\n",
+       "        -1.        ],\n",
+       "       [ 1.        ,  0.45454545, -1.        , -1.        , -1.        ,\n",
        "        -0.2       ],\n",
-       "       [-1.        ,  0.09090909, -1.        , -1.        , -1.        ,\n",
-       "        -0.6       ],\n",
-       "       [-1.        , -0.63636364, -1.        , -1.        , -1.        ,\n",
+       "       [-1.        ,  0.45454545, -1.        , -1.        , -1.        ,\n",
        "        -1.        ],\n",
        "       ...,\n",
-       "       [-1.        ,  0.45454545, -1.        , -1.        , -1.        ,\n",
-       "        -0.2       ],\n",
-       "       [-1.        ,  0.63636364, -1.        , -1.        , -1.        ,\n",
-       "        -0.2       ],\n",
        "       [-1.        ,  0.09090909, -1.        , -1.        , -1.        ,\n",
-       "        -0.2       ]])"
+       "        -1.        ],\n",
+       "       [-1.        , -0.09090909, -1.        , -1.        , -1.        ,\n",
+       "        -1.        ],\n",
+       "       [-1.        ,  0.45454545, -1.        , -1.        , -1.        ,\n",
+       "        -0.6       ]])"
       ]
      },
      "execution_count": 12,
@@ -352,8 +352,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy:  0.6955203308063405\n",
-      "Testing Accuracy:  0.6996554100620261\n"
+      "Training Accuracy:  0.6961750516884907\n",
+      "Testing Accuracy:  0.6975878704341834\n"
      ]
     }
    ],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -390,8 +390,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy:  0.6725017229496899\n",
-      "Training Accuracy:  0.6723638869745003\n"
+      "Training Accuracy:  0.6705031013094418\n",
+      "Testing Accuracy:  0.6803583735354928\n"
      ]
     }
    ],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -428,56 +428,27 @@
      "output_type": "stream",
      "text": [
       "Using 1 features:\n",
-      "Training Accuracy:  0.673625\n",
-      "Testing Accuracy:  0.683\n",
+      "Training Accuracy:  0.6719159200551343\n",
+      "Testing Accuracy:  0.6741557546519642\n",
       "Using 2 features:\n",
-      "Training Accuracy:  0.67475\n",
-      "Testing Accuracy:  0.6785\n",
+      "Training Accuracy:  0.6712267401791868\n",
+      "Testing Accuracy:  0.6769124741557546\n",
       "Using 3 features:\n",
-      "Training Accuracy:  0.677625\n",
-      "Testing Accuracy:  0.667\n",
+      "Training Accuracy:  0.6728118538938663\n",
+      "Testing Accuracy:  0.6705720192970366\n",
       "Using 4 features:\n",
-      "Training Accuracy:  0.678125\n",
-      "Testing Accuracy:  0.665\n",
+      "Training Accuracy:  0.6722949689869056\n",
+      "Testing Accuracy:  0.6726395589248794\n",
       "Using 5 features:\n",
-      "Training Accuracy:  0.674875\n",
-      "Testing Accuracy:  0.678\n",
+      "Training Accuracy:  0.6713990351481737\n",
+      "Testing Accuracy:  0.6767746381805652\n",
       "Using 6 features:\n",
-      "Training Accuracy:  0.678625\n",
-      "Testing Accuracy:  0.663\n",
+      "Training Accuracy:  0.697381116471399\n",
+      "Testing Accuracy:  0.6927636113025499\n",
       "Using 7 features:\n",
-      "Training Accuracy:  0.67875\n",
-      "Testing Accuracy:  0.6625\n",
-      "Using 8 features:\n",
-      "Training Accuracy:  0.69325\n",
-      "Testing Accuracy:  0.6915\n",
-      "Using 9 features:\n",
-      "Training Accuracy:  0.68875\n",
-      "Testing Accuracy:  0.7045\n",
-      "Using 10 features:\n",
-      "Training Accuracy:  0.6965\n",
-      "Testing Accuracy:  0.6915\n",
-      "Using 11 features:\n",
-      "Training Accuracy:  0.7055\n",
-      "Testing Accuracy:  0.7105\n",
-      "Using 12 features:\n",
-      "Training Accuracy:  0.71\n",
-      "Testing Accuracy:  0.719\n",
-      "Using 13 features:\n",
-      "Training Accuracy:  0.714125\n",
-      "Testing Accuracy:  0.713\n",
-      "Using 14 features:\n",
-      "Training Accuracy:  0.742\n",
-      "Testing Accuracy:  0.7235\n",
-      "Using 15 features:\n",
-      "Training Accuracy:  0.753\n",
-      "Testing Accuracy:  0.7475\n",
-      "Using 16 features:\n",
-      "Training Accuracy:  0.801\n",
-      "Testing Accuracy:  0.8035\n",
-      "Using 17 features:\n",
-      "Training Accuracy:  0.845\n",
-      "Testing Accuracy:  0.8235\n"
+      "Training Accuracy:  0.6891454169538249\n",
+      "Testing Accuracy:  0.6876636802205376\n",
+      "I came here\n"
      ]
     }
    ],
