--- a/qmul/csp763/Unit1_introduction/nb1.ipynb
+++ b/qmul/csp763/Unit1_introduction/nb1.ipynb
@@ -9,22 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: unicodecsv in /anaconda2/envs/py37/lib/python3.7/site-packages (0.14.1)\n",
-      "Requirement already satisfied: nltk in /anaconda2/envs/py37/lib/python3.7/site-packages (3.7)\n",
-      "Requirement already satisfied: joblib in /anaconda2/envs/py37/lib/python3.7/site-packages (from nltk) (1.1.0)\n",
-      "Requirement already satisfied: click in /anaconda2/envs/py37/lib/python3.7/site-packages (from nltk) (8.1.3)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in /anaconda2/envs/py37/lib/python3.7/site-packages (from nltk) (2022.8.17)\n",
-      "Requirement already satisfied: tqdm in /anaconda2/envs/py37/lib/python3.7/site-packages (from nltk) (4.64.1)\n",
-      "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /anaconda2/envs/py37/lib/python3.7/site-packages (from click->nltk) (4.12.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /anaconda2/envs/py37/lib/python3.7/site-packages (from importlib-metadata; python_version < \"3.8\"->click->nltk) (4.3.0)\n",
-      "Requirement already satisfied: zipp>=0.5 in /anaconda2/envs/py37/lib/python3.7/site-packages (from importlib-metadata; python_version < \"3.8\"->click->nltk) (3.8.1)\n"
+      "Collecting unicodecsv\n",
+      "  Downloading unicodecsv-0.14.1.tar.gz (10 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: unicodecsv\n",
+      "  Building wheel for unicodecsv (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for unicodecsv: filename=unicodecsv-0.14.1-py3-none-any.whl size=10747 sha256=f60b41b178be4de98d7876ec69b60c899139b347dcc56c8778c3d47c97ae27c7\n",
+      "  Stored in directory: /Users/bhekimaenetja/Library/Caches/pip/wheels/d8/c8/27/b237d3378d5c9ed25c2c63d9af1b3d5ccb99934f3dd030de87\n",
+      "Successfully built unicodecsv\n",
+      "Installing collected packages: unicodecsv\n",
+      "Successfully installed unicodecsv-0.14.1\n",
+      "Requirement already satisfied: nltk in /Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages (3.8.1)\n",
+      "Requirement already satisfied: click in /Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages (from nltk) (8.1.7)\n",
+      "Requirement already satisfied: joblib in /Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages (from nltk) (1.3.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages (from nltk) (2023.10.3)\n",
+      "Requirement already satisfied: tqdm in /Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages (from nltk) (4.66.1)\n"
      ]
     }
    ],
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1242,7 @@
        " ...}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1299,7 @@
        " 1.0)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,16 +1312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({-1.0: 1000, 1.0: 1000})"
+       "Counter({1.0: 1000, -1.0: 1000})"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1919,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1954,30 +1960,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{372: 1, 438: 1, 5369: 1}\n"
+      "{56: 1, 57: 1, 806: 2, 539: 1, 88: 1, 2199: 1, 33: 1}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-1.0"
+       "1.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# See if we can make it output the negative label (-1)\n",
-    "analyseSentiment(\"oh no :(\")"
+    "analyseSentiment(\"This is very very good and bad.\")"
    ]
   },
   {
@@ -1997,7 +2003,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2011,7 +2017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
