--- a/qmul/csp763/Unit3_modelling/Ngram_language_modelling_exercises_SOLUTIONS.ipynb
+++ b/qmul/csp763/Unit3_modelling/Ngram_language_modelling_exercises_SOLUTIONS.ipynb
@@ -1804,7 +1804,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1818,9 +1818,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
