--- a/qmul/csp763/CW1/230382466-Bheki-Maenetja-CW1.ipynb
+++ b/qmul/csp763/CW1/230382466-Bheki-Maenetja-CW1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "from sklearn.svm import LinearSVC\n",
     "from nltk.classify import SklearnClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import precision_recall_fscore_support # to report on precision and recall\n",
+    "from sklearn.metrics import precision_recall_fscore_support, accuracy_score # to report on precision and recall\n",
     "import numpy as np"
    ]
   },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,20 +191,35 @@
     "\n",
     "\n",
     "def cross_validate(dataset, folds):\n",
-    "    results = []\n",
+    "    cv_results = np.array([0,0,0,0])\n",
+    "    fold_results = []\n",
     "    fold_size = int(len(dataset)/folds) + 1\n",
     "    \n",
     "    for i in range(0,len(dataset),int(fold_size)):\n",
     "        # insert code here that trains and tests on the 10 folds of data in the dataset\n",
     "        print(\"Fold start on items %d - %d\" % (i, i+fold_size))\n",
     "        # FILL IN THE METHOD HERE\n",
+    "        train = dataset[:i] + dataset[i+fold_size:]\n",
+    "        test = dataset[i:i+fold_size]\n",
     "        \n",
-    "    return None"
+    "        true_vals = [t[1] for t in test]\n",
+    "        \n",
+    "        clf = train_classifier(train)\n",
+    "        preds = predict_labels([x[0] for x in test], clf)\n",
+    "        \n",
+    "        prec, rec, f, _ = precision_recall_fscore_support(true_vals, preds, average=\"weighted\")\n",
+    "        acc = accuracy_score(true_vals, preds)\n",
+    "        result = [prec, rec, f, acc]\n",
+    "        \n",
+    "        cv_results = cv_results + result\n",
+    "        fold_results.append(result)\n",
+    "        \n",
+    "    return cv_results / folds, fold_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,9 +236,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now 0 rawData, 0 trainData, 0 testData\n",
+      "Preparing the dataset...\n",
+      "Now 33540 rawData, 0 trainData, 0 testData\n",
+      "Preparing training and test data...\n",
+      "After split, 33540 rawData, 26832 trainData, 6708 testData\n",
+      "Training Samples: \n",
+      "26832\n",
+      "Features: \n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# MAIN\n",
     "\n",
@@ -261,7 +292,88 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold start on items 0 - 2684\n",
+      "Training Classifier...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold start on items 2684 - 5368\n",
+      "Training Classifier...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold start on items 5368 - 8052\n",
+      "Training Classifier...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold start on items 8052 - 10736\n",
+      "Training Classifier...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold start on items 10736 - 13420\n",
+      "Training Classifier...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "cross_validate(train_data, 10)  # will work and output overall performance of p, r, f-score when cv implemented"
    ]
@@ -275,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,14 +442,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "({'Tomorrow': 1, \"we'll\": 1, 'release': 1, 'our': 2, '58th': 1, 'episode': 1, 'of': 1, '#HSonAir': 1, 'profiling': 1, 'very': 1, 'own': 1, '@AlissaDosSantos': 1, '!': 1, \"We'll\": 1, 'talk': 1, 'about': 1, 'storytelling': 1, 'and': 1, 'Beyonce!': 1, '</s>': 1}, 'positive')\n",
+      "Training Classifier...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bhekimaenetja/.local/share/virtualenvs/small-projects-ai-NRjJWIjk/lib/python3.9/site-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done training!\n",
+      "Precision: 0.833367\n",
+      "Recall: 0.835122\n",
+      "F Score:0.833840\n"
+     ]
+    }
+   ],
    "source": [
     "# Finally, check the accuracy of your classifier by training on all the traning data\n",
     "# and testing on the test set\n",
     "# Will only work once all functions are complete\n",
-    "functions_complete = False  # set to True once you're happy with your methods for cross val\n",
+    "functions_complete = True  # set to True once you're happy with your methods for cross val\n",
     "if functions_complete:\n",
     "    print(test_data[0])   # have a look at the first test data instance\n",
     "    classifier = train_classifier(train_data)  # train the classifier\n",
