--- a/qmul/csp708/Lab4_classification_1/230382466-Bheki-Maenetja_CW1-Part2A.ipynb
+++ b/qmul/csp708/Lab4_classification_1/230382466-Bheki-Maenetja_CW1-Part2A.ipynb
@@ -31,6 +31,7 @@
    },
    "outputs": [],
    "source": [
+    "# !pip install torch\n",
     "import torch\n",
     "from torch import nn\n",
     "from torch import optim\n",
