--- a/qmul/csp759/Lab4_evolutionary_computing/Lab4-solution.ipynb
+++ b/qmul/csp759/Lab4_evolutionary_computing/Lab4-solution.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "C1DnADknVW-y"
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "Z6t_DVA-kPxN"
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -172,7 +172,18 @@
     "id": "7KYL_w4AkPxO",
     "outputId": "00638b59-1f32-4b06-b11a-35e87bcef96d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2, 3), (1, 3, 2), (2, 1, 3), (2, 3, 1), (3, 1, 2), (3, 2, 1)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Permutation function is already defined in the itertools module\n",
     "alltours = itertools.permutations\n",
@@ -192,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "yLmfUgfekPxO"
    },
@@ -217,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "QezEEOn8kPxO"
    },
@@ -237,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "miocClwqkPxO"
    },
@@ -252,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -270,7 +281,18 @@
     "id": "K0i_EcqRkPxO",
     "outputId": "e485757a-671c-485f-a5b0-d2c1a2c8fcc2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A = City(300, 0)\n",
     "B = City(0, 400)\n",
@@ -279,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "OsdMEq0qkPxO"
    },
@@ -296,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -314,7 +336,25 @@
     "id": "QU4u4ixJkPxO",
     "outputId": "b8da824e-22d0-4a05-985f-54acbb7623ea"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(374+63j),\n",
+       " (456+246j),\n",
+       " (50+354j),\n",
+       " (691+440j),\n",
+       " (709+259j),\n",
+       " (781+349j),\n",
+       " (863+276j),\n",
+       " (91+475j)}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's try some examples\n",
     "cities8, cities10, cities100, cities1000 = generate_cities(8), generate_cities(10), generate_cities(100), generate_cities(1000)\n",
@@ -337,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "y1EiG9gSYPqY"
    },
@@ -361,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "e35foEabYPqZ"
    },
@@ -421,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "3W-3hQAJYPqZ"
    },
@@ -438,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -456,7 +496,17 @@
     "id": "FeQhNqNJYPqa",
     "outputId": "f056b8b0-1349-4044-c8a8-17346e11cd83"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(624+178j), (45+395j), (171+141j), (499+331j), (416+82j), (53+332j), (252+117j), (355+318j), (254+375j), (719+158j), (13+308j), (484+557j), (25+306j), (622+471j), (376+513j), (764+385j), (769+236j), (505+582j), (508+454j), (241+248j), (174+165j), (210+516j), (456+499j), (157+429j), (809+341j), (488+365j), (841+35j), (748+409j), (446+574j), (782+187j)]\n",
+      "Best initial population result has a fitness of 8615.776426423134\n",
+      "Best result has a fitness of 5212.656891536009\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of cities in our problem\n",
     "num_cities = 30\n",
@@ -1891,7 +1941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
