implemented genetic algorithm

--- a/qmul/csp759/CW1/230382466-Bheki_Maenetja-CW1.ipynb
+++ b/qmul/csp759/CW1/230382466-Bheki_Maenetja-CW1.ipynb
@@ -5,7 +5,7 @@
    "id": "779b94fe-f683-4e71-82d3-774dc81f381d",
    "metadata": {},
    "source": [
-    "# EECS759P Coursework 2\n",
+    "# EECS759P Coursework 1\n",
     "- Name: Bheki Maenetja\n",
     "- Student ID: 230382466"
    ]
@@ -27,7 +27,11 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from collections import defaultdict, deque"
+    "from collections import defaultdict, deque\n",
+    "import math\n",
+    "import hashlib\n",
+    "import string\n",
+    "import random"
    ]
   },
   {
@@ -2916,9 +2920,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae889a4b-6e5a-4919-bc7d-db9a15fcbb0f",
+   "metadata": {},
+   "source": [
+    "## 3.1 Genetic Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ccf4f04-7546-4bb1-b7af-c58be6890db2",
+   "metadata": {},
+   "source": [
+    "### Starter Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5bf62df8-180b-4f04-b4b4-d1eb3ba68c0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZS09_JG55Z\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'2Q4HHHHOTJ': 0.48234584062986685, '2HHZQYUOTJ': 0.32453125283957984}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MY_USERNAME = \"ecs23496\"\n",
+    "\n",
+    "def get_password(student_username, l=10):\n",
+    "    # Possible characters include upper-case English letters, numbers between 0 and 9 (inclusive), \n",
+    "    # and the underscore symbol\n",
+    "    options = string.digits + string.ascii_uppercase  + \"_\"\n",
+    "\n",
+    "    h = hashlib.sha256((\"ECS759P-AI\"+student_username).encode(\"utf-8\"))\n",
+    "    d = h.digest()\n",
+    "    s = \"\"\n",
+    "    for n in d:\n",
+    "      s += options[n%len(options)]\n",
+    "\n",
+    "    return s[0:l]\n",
+    "\n",
+    "# TO DO: replace *** with your EECS username and uncomment the code\n",
+    "student_password = get_password(MY_USERNAME)\n",
+    "print(student_password)\n",
+    "\n",
+    "# Distance function\n",
+    "def distance_function(string_one, string_two):\n",
+    "    score = 0\n",
+    "    for i, j in zip(string_one, string_two):\n",
+    "        # Square of the absolute difference between two Unicode codes\n",
+    "        score += math.sqrt(abs(ord(i) - ord(j)))\n",
+    "    return score\n",
+    "\n",
+    "\n",
+    "# Upper bound of the distance value\n",
+    "MAX_VALUE = distance_function('0000000000', '__________')\n",
+    "\n",
+    "# Compute normalised fitness for a list of candidate passwords \n",
+    "def get_normalised_fitness(list_of_phrases, student_password):\n",
+    "    ordered_dict = dict()\n",
+    "    phrase_to_find = student_password\n",
+    "    for phrase in list_of_phrases:\n",
+    "        # Return 1 when a candidate matches the true password (string distance between them is zero)\n",
+    "        ordered_dict[phrase] = 1 - distance_function(phrase, phrase_to_find) / MAX_VALUE\n",
+    "    return ordered_dict\n",
+    "\n",
+    "# Example of how to get fitness values for a list of candidates\n",
+    "get_normalised_fitness(['2Q4HHHHOTJ', '2HHZQYUOTJ'], student_password)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f73dc8ee-8b1d-4053-aaf7-e16f40ccb9d2",
+   "metadata": {},
+   "source": [
+    "### Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9ad9c8a4-219c-4ae2-8785-15eb3b5ac9f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialise_population(pop_size):\n",
+    "    options = string.digits + string.ascii_uppercase  + \"_\"\n",
+    "    return [\"\".join(random.sample(options, 10)) for _ in range(pop_size)]\n",
+    "\n",
+    "def assign_fitness(population, target):\n",
+    "    return get_normalised_fitness(population, target)\n",
+    "\n",
+    "def mating_selection():\n",
+    "    pass\n",
+    "\n",
+    "def cross_over(cross_pool, cross_prob=0.5):\n",
+    "    offspring = []\n",
+    "    other_parents = cross_pool.copy()\n",
+    "    \n",
+    "    for parent in cross_pool:\n",
+    "        rand_prob = random.random()\n",
+    "        if rand_prob <= cross_prob and parent in other_parents and len(other_parents) > 1:\n",
+    "            other_parents.remove(parent)\n",
+    "            other_parent = random.choice(other_parents)\n",
+    "            other_parents.remove(other_parent)\n",
+    "            cross_point = random.randint(0,10)\n",
+    "\n",
+    "            child_1 = parent[:cross_point] + other_parent[cross_point:]\n",
+    "            child_2 = other_parent[:cross_point] + parent[cross_point:]\n",
+    "\n",
+    "            offspring.append(child_1)\n",
+    "            offspring.append(child_2)\n",
+    "\n",
+    "    return offspring\n",
+    "\n",
+    "def mutation(mut_pool, mut_prob=0.5):\n",
+    "    mut_children = []\n",
+    "    \n",
+    "    for child in mut_pool:\n",
+    "        child = list(child)\n",
+    "        for i, letter in enumerate(child):\n",
+    "            rand_prob = random.random()\n",
+    "            if rand_prob <= mut_prob:\n",
+    "                randIdx = random.randint(0, len(child) - 1)\n",
+    "                temp = child[randIdx]\n",
+    "                child[randIdx] = child[i]\n",
+    "                child[i] = temp\n",
+    "\n",
+    "        mut_children.append(\"\".join(child))\n",
+    "\n",
+    "    return mut_children\n",
+    "\n",
+    "def selection():\n",
+    "    pass\n",
+    "\n",
+    "def genetic_algorithm(target, n_gen=1000, pop_size=1000, cross_prob=0.5, mut_prob=0.5):\n",
+    "    half = pop_size // 2\n",
+    "    generations = n_gen\n",
+    "    \n",
+    "    # Initialise population\n",
+    "    new_pop = initialise_population(pop_size)\n",
+    "\n",
+    "    if any(w == target for w in new_pop):\n",
+    "        print(\"Got it!!!\")\n",
+    "        return\n",
+    "    \n",
+    "    # Assign fitness\n",
+    "    fitness = assign_fitness(new_pop, target)\n",
+    "\n",
+    "    # Mating Selection\n",
+    "    new_pop.sort(key=lambda x: fitness[x], reverse=True)\n",
+    "    print(f\"Fittest initial individual: {new_pop[0]} (f={fitness[new_pop[0]]})\")\n",
+    "    \n",
+    "    for i in range(n_gen):\n",
+    "        mating_pool = new_pop.copy()[:half]\n",
+    "        \n",
+    "        # Crossover\n",
+    "        mating_pool = cross_over(mating_pool, cross_prob)\n",
+    "\n",
+    "        # Mutation\n",
+    "        mating_pool = mutation(mating_pool, mut_prob)\n",
+    "\n",
+    "        # Selection\n",
+    "        new_pop = new_pop.copy()[:half] + mating_pool\n",
+    "        fitness = assign_fitness(new_pop, target)\n",
+    "        new_pop.sort(key=lambda x: fitness[x], reverse=True)\n",
+    "\n",
+    "        if fitness[new_pop[0]] == 1:\n",
+    "            generations = i + 1\n",
+    "            break\n",
+    "\n",
+    "    print(f\"Fittest final individual: {new_pop[0]} (f={fitness[new_pop[0]]}); found after {generations} generations.\")\n",
+    "    print(f\"Actual target: {target}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "463cc583-1551-4b22-92ed-178b94c89905",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fittest initial individual: SRA9ZJO64E (f=0.7167895866173265)\n",
+      "Fittest final individual: ZS09_JG55Z (f=1.0); found after 871 generations.\n",
+      "Actual target: ZS09_JG55Z\n"
+     ]
+    }
+   ],
+   "source": [
+    "genetic_algorithm(student_password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5b281e40-fab0-4283-8a6e-aeda415b74cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fittest initial individual: SOFBUJ913X (f=0.6489244186664747)\n",
+      "Fittest final individual: ZS09_JG55Z (f=1.0); found after 766 generations.\n",
+      "Actual target: ZS09_JG55Z\n"
+     ]
+    }
+   ],
+   "source": [
+    "genetic_algorithm(student_password, n_gen=1000, pop_size=1000, cross_prob=0.5, mut_prob=0.5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "780d7142-d65e-4396-a24b-9c9e0725d047",
+   "id": "033ee4a8-4dfd-4c29-9520-45d6e7dd8ccd",
    "metadata": {},
    "outputs": [],
    "source": []
