--- a/qmul/csp708/Lab6_neural_nets/230382466-Bheki-Maenetja_CW1-Part2B.ipynb
+++ b/qmul/csp708/Lab6_neural_nets/230382466-Bheki-Maenetja_CW1-Part2B.ipynb
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fbafe85e190>"
+       "<torch._C.Generator at 0x7f940d29e190>"
       ]
      },
      "execution_count": 1,
